--- a/index.html
+++ b/index.html
@@ -8,18 +8,22 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   <!-- 부트스트랩 JS CDN -->
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+   
 </head>
 <body class="bg-warning-subtle">
   <!-- 내비게이션 바 -->
-   <nav class="navbar navbar-expand-lg bg-dark navbar-dark sticky-top">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">영화검색기</a>
-      <div>
-        <a class="nav-link" href="#search">영화 검색</a>  <!--id="search"를 가진 요소로 스크롤해서 자동 이동-->
-        <a class="nav-link text-white" href="about.html">개발자 소개</a>  
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">영화 검색</a>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" href="about.html">개발자 소개</a>
+          </li>
+        </ul>
       </div>
     </div>
-   </nav>
+  </nav>
 
    <!-- 검색 섹션 -->
    <section id="search" class="container my-5">
