--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   <!-- 부트스트랩 JS CDN -->
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
-   
+   <style>
+    .card-img-top {
+      width: 100%; /*카드 너비에 딱 맞게*/
+      height: 350px; /* 높이 원하는 크기로 고정*/
+    }
+   </style>
 </head>
 <body class="bg-warning-subtle">
   <!-- 내비게이션 바 -->
@@ -36,9 +41,14 @@
     <div id="movieList" class="row gy-4">
       <!-- JS로 카드가 여기에 들어감 -->
     </div>
+
+    <!-- ✅ 페이지네이션 버튼 영역 -->
+    <div id="pagination" class="d-flex justify-content-center mt-4">
+    <!-- JS가 버튼 채워넣음 -->
+    </div>
    </section>
 
-  <script src="/js/movieList.js"></script>
-  <script type="module" src="/js/main.js"></script>
+  <script src="./js/movieList.js"></script>
+  <script type="module" src="./js/main.js"></script>
 </body>
 </html>
