fix: 상세 페이지의 '영화 상세' 내비게이션 링크 버그 수정

--- a/detail.html
+++ b/detail.html
@@ -22,7 +22,7 @@
             <a class="nav-link" href="about.html">개발자 소개</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="detail.html">영화 상세</a>
+            <a class="nav-link active" href="#">영화 상세</a>
           </li>
         </ul>
       </div>
